--- a/style.scss
+++ b/style.scss
@@ -25,7 +25,7 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 740px;
+  max-width: 80%;
   padding: 0 10px;
   width: 100%;
 }
@@ -276,6 +276,9 @@ nav {
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
   background-color: $lightGray;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
 }
 
 footer {
