--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
   <h1>About Us</h1>
   <p>{{ site.long_description }}</p>
 </div>
-<div class="user">
+<div class="company">
   <div class="skill">
     <h2>Software</h2>
     <svg viewBox="0 0 128 128">
