--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -1,5 +1,5 @@
-{% if site.footer-links.dribbble %}<a aria-label="Dribble" target="_blank" href="https://dribbble.com/{{ site.footer-links.dribbble }}"><i class="icon fa fa-dribbble"></i></a>{% endif %}
-{% if site.footer-links.email %}<a href="mailto:{{ site.footer-links.email }}"><i class="icon fa fa-evnelope"></i></a>{% endif %}
+{% if site.footer-links.dribbble %}<a aria-label="dribbble" target="_blank" href="https://dribbble.com/{{ site.footer-links.dribbble }}"><i class="icon fa fa-dribbble"></i></a>{% endif %}
+{% if site.footer-links.email %}<a href="mailto:{{ site.footer-links.email }}"><i class="icon fa fa-envelope"></i></a>{% endif %}
 {% if site.footer-links.facebook %}<a href="https://www.facebook.com/{{ site.footer-links.facebook }}"><i class="icon fa fa-facebook"></i></a>{% endif %}
 {% if site.footer-links.flickr %}<a href="https://www.flickr.com/{{ site.footer-links.flickr }}"><i class="icon fa fa-flickr"></i></a>{% endif %}
 {% if site.footer-links.github %}<a href="https://github.com/{{ site.footer-links.github }}"><i class="icon fa fa-github-alt"></i></a>{% endif %}
