--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -8,7 +8,7 @@
 {% if site.footer-links.pinterest %}<a href="https://www.pinterest.com/{{ site.footer-links.pinterest }}"><i class="icon fa fa-pinterest"></i></a>{% endif %}
 {% if site.footer-links.rss %}<a href="{{ site.baseurl }}/feed.xml"><i class="icon fa fa-rss"></i></a>{% endif %}
 {% if site.footer-links.twitter %}<a href="https://www.twitter.com/{{ site.footer-links.twitter }}"><i class="icon fa fa-twitter"></i></a>{% endif %}
-{% if site.footer-links.stackoverflow %}<a href="http://stackoverflow.com/{{ site.footer-links.stackoverflow }}"><i class="icon fa fa-stackoverflow"></i></a>{% endif %}
+{% if site.footer-links.stackoverflow %}<a href="http://stackoverflow.com/{{ site.footer-links.stackoverflow }}"><i class="icon fa fa-stack-overflow"></i></a>{% endif %}
 {% if site.footer-links.youtube %}<a href="https://youtube.com/{{ site.footer-links.youtube }}"><i class="icon fa fa-youtube"></i></a>{% endif %}
-{% if site.footer-links.googleplus %}<a href="https://plus.google.com/{{ site.footer-links.googleplus }}"><i class="icon fa fa-googleplus"></i></a>{% endif %}
+{% if site.footer-links.googleplus %}<a href="https://plus.google.com/{{ site.footer-links.googleplus }}"><i class="icon fa fa-google-plus"></i></a>{% endif %}
 {% if site.footer-links.reddit %}<a href="https://reddit.com/y/{{ site.footer-links.reddit }}"><i class="icon fa fa-reddit"></i></a>{% endif %}
