--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 <html lang="en">
+<head>
+  <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }}</title> 
+  
+  {% include meta.html %}
+
+  <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
+  <link rel="shortcut icon" type="image/png" href="{{ '/assets/favicon.png' }}" >
+</head>
+
   {% include head.html %}
   <body>
-      <div class="wrapper-masthead">
-      <div class="container">
-        <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
+	  <div class="wrapper-masthead">
+		  <div class="container">
+			<header class="masthead clearfix">
+			  <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
 
-          <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
-          </div>
+			  <div class="site-info">
+				<h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+				<p class="site-description">{{ site.description }}</p>
+			  </div>
 
-          <nav>
-            <a href="{{ site.baseurl }}/">Home</a>
-            <a href="{{ site.baseurl }}/blog">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-          </nav>
-        </header>
-      </div>
-    </div>
+			  <nav>
+				<a href="{{ site.baseurl }}/">Home</a>
+				<a href="{{ site.baseurl }}/blog">Blog</a>
+				<a href="{{ site.baseurl }}/about">About</a>
+			  </nav>
+			</header>
+		  </div>
+		</div>
   
       {% include header.html %}
       <section id="about">
