--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -8,6 +8,9 @@
 		<link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
 		<link rel="shortcut icon" type="image/png" href="{{ '/assets/favicon.png' }}" >
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		
+		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+		<link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 	</head>
 
 	{% include head.html %}
