use jekyll-now footer

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -67,7 +67,16 @@
 		{% include about.html %}
 		</section>
 		
-		{{ content }}
-		{% include footer.html %}
+		<div id="main" role="main" class="container">
+			{{ content }}
+		</div>
+
+		<div class="wrapper-footer">
+			<footer class="footer">
+				{% include svg-icons.html %}
+			</footer>
+		</div>
+
+		{% include analytics.html %}
 	</body>
 </html>
