--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -8,6 +8,9 @@
 		<!--[if lt IE 9]>
 			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
+		
+		<link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
+		<link rel="shortcut icon" type="image/png" href="{{ '/assets/favicon.png' }}" >
 
 		<link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
 		<link rel="shortcut icon" type="image/png" href="{{ '/assets/favicon.png' }}" >
