--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -9,8 +9,7 @@
 			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 		
-		<link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
-		<link rel="shortcut icon" type="image/png" href="{{ '/assets/favicon.png' }}" >
+		<!-- I might want to replace the animated header particle things with a pretty picture instead? -->
 
 		<link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
 		<link rel="shortcut icon" type="image/png" href="{{ '/assets/favicon.png' }}" >
@@ -21,7 +20,8 @@
 	</head>
 	
 	<body>
-		<div id="particles-js">
+		<!--<div id="particles-js">-->
+		<img id="particles-js" src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwiK26fH_6jlAhUKKKwKHT9fBSYQjRx6BAgBEAQ&url=https%3A%2F%2Fweheartit.com%2Fentry%2F25175832&psig=AOvVaw2r9wCOIoioQEc9k0ucO0vr&ust=1571597633352806">
 			  <div class="header">
 				  <h1>
 					<span class="site-title">{{ site.name }}</span>
@@ -31,7 +31,7 @@
 				  <div class="header-links">
 					<!-- <a class="link" href="#about" data-scroll>About Me</a> -->
 				  </div>
-			  </div>
+			  </a>
 			  
 			  <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
 		</div>
