back to regular thing
remove the image test. i'm not smart enough to make that work very well

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -20,8 +20,7 @@
 	</head>
 	
 	<body>
-		<!--<div id="particles-js">-->
-		<img id="particles-js" src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwiK26fH_6jlAhUKKKwKHT9fBSYQjRx6BAgBEAQ&url=https%3A%2F%2Fweheartit.com%2Fentry%2F25175832&psig=AOvVaw2r9wCOIoioQEc9k0ucO0vr&ust=1571597633352806">
+		<div id="particles-js">
 			  <div class="header">
 				  <h1>
 					<span class="site-title">{{ site.name }}</span>
@@ -31,7 +30,7 @@
 				  <div class="header-links">
 					<!-- <a class="link" href="#about" data-scroll>About Me</a> -->
 				  </div>
-			  </a>
+			  </div>
 			  
 			  <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
 		</div>
