--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -17,6 +17,10 @@
 		
 		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
 		<link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+		
+		<script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+		<script src="{{ '/assets/js/sweet-scroll.min.js' | prepend: site.baseurl }}"></script>
+		<script src="{{ '/assets/js/main.js' | prepend: site.baseurl }}"></script>
 	</head>
 	
 	<body>
