Revert "add header link"
This reverts commit 6273514e7376556b0dbb5500bd86c7ee563a6fce.

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -32,7 +32,7 @@
 				  </h1>
 				 
 				  <div class="header-links">
-					<a class="link" href="/about/" data-scroll>About Me</a>
+					<!-- <a class="link" href="#about" data-scroll>About Me</a> -->
 				  </div>
 			  </div>
 			  
