put the footer icons in their own div

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -67,7 +67,9 @@
 		</div>
 
 		<footer class="footer">
-			{% include svg-icons.html %}
+			<div class="footer-icons">
+				{% include svg-icons.html %}
+			</div>
 		</footer>
 
 		{% include analytics.html %}
