--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5043,7 +5043,7 @@ body {
 }
 
 .footer {
-    background: 494949;
+    background: #494949;
     padding: 10px 0;
     margin-top: 100px;
     text-align: center;
