--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -67,8 +67,16 @@
 		</div>
 
 		<footer class="footer">
+			<div class="footer-right">
+				<p>&copy; {{ site.name }}</p>
+			</div>
+			
 			<div class="footer-icons">
 				{% include svg-icons.html %}
+			</div>
+			
+			<div class="footer-right">
+				<p>Page theme by <a href="https://github.com/murraco">Mauricio Urraco</a>
 			</div>
 		</footer>
 
