update CSS for footer left and right
and fix footer-left being footer-right

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -67,7 +67,7 @@
 		</div>
 
 		<footer class="footer">
-			<div class="footer-right">
+			<div class="footer-left">
 				<p>&copy; {{ site.name }}</p>
 			</div>
 			
