improve positioning on footer-left
and fix missing </p>

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -68,7 +68,7 @@
 
 		<footer class="footer">
 			<div class="footer-left">
-				<p>Page theme by <a href="https://github.com/murraco">Mauricio Urraco</a>
+				<p>Page theme by <a href="https://github.com/murraco">Mauricio Urraco</a> with <span class="love">❤</span></p>
 			</div>
 			
 			<div class="footer-icons">
