change class to id in about.html

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
-<section class="about>
+<section id="about>
 	<div class="company">
 		<div class="skill">
 			<a href="/software/"><h2>Software</h2></a>
