revert update about stuff

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -58,7 +58,9 @@
 			</div>
 		</div>
 		
-		{% include about.html %}
+		<section id="about">
+			{% include about.html %}
+		</section>
 		
 		<div id="main" role="main" class="container">
 			{{ content }}
