--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -31,9 +31,12 @@
 					<span class="site-description">{{ site.description }}</span>
 				  </h1>
 				 
+				 <!--
 				  <div class="header-links">
-					<!-- <a class="link" href="#about" data-scroll>About Me</a> -->
+					<a class="link" href="#about" data-scroll>About</a>
+					<a class="link" href="#about" data-scroll>Blog</a>
 				  </div>
+				  -->
 			  </div>
 			  
 			  <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
