--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -17,49 +17,10 @@
 		
 		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
 		<link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-		
-		<script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-		<script src="{{ '/assets/js/sweet-scroll.min.js' | prepend: site.baseurl }}"></script>
-		<script src="{{ '/assets/js/main.js' | prepend: site.baseurl }}"></script>
 	</head>
 	
 	<body>
-		<div id="particles-js">
-			  <div class="header">
-				  <h1>
-					<span class="site-title">{{ site.name }}</span>
-					<span class="site-description">{{ site.description }}</span>
-				  </h1>
-				 
-				 <!--
-				  <div class="header-links">
-					<a class="link" href="#about" data-scroll>About</a>
-					<a class="link" href="#about" data-scroll>Blog</a>
-				  </div>
-				  -->
-			  </div>
-			  
-			  <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
-		</div>
-		
-		<div class="wrapper-masthead">
-			<div class="container">
-				<header class="masthead clearfix">
-					<a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
-
-					<div class="site-info">
-						<h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-						<p class="site-description">{{ site.description }}</p>
-					</div>
-
-					<nav>
-						<a href="{{ site.baseurl }}/">Home</a>
-						<a href="{{ site.baseurl }}/blog">Blog</a>
-						<a href="{{ site.baseurl }}/about">About</a>
-					</nav>
-				</header>
-			</div>
-		</div>
+		{% include masthead.html %}
 		
 		{% include about.html %}
 		
@@ -68,10 +29,6 @@
 		</div>
 
 		<footer class="footer">
-			<div class="footer-left">
-				<p>Page theme by <a href="https://github.com/murraco">Mauricio Urraco</a> with <span class="love">❤</span></p>
-			</div>
-			
 			<div class="footer-icons">
 				{% include svg-icons.html %}
 			</div>
