--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -28,11 +28,11 @@
 			{{ content }}
 		</div>
 
-		<footer class="footer">
-			<div class="footer-icons">
-				{% include svg-icons.html %}
-			</div>
-		</footer>
+		<div class="wrapper-footer">
+		  <footer class="footer">
+			{% include svg-icons.html %}
+		  </footer>
+		</div>
 
 		{% include analytics.html %}
 	</body>
