user-details -> user

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,5 @@
 <section id="about">
-	<div class="user-details">
+	<div class="user">
 		<div class="tech">
 			<a href="/software/"><h2>Software</h2></a>
 			<svg viewBox="0 0 128 128">
