--- a/main.css
+++ b/main.css
@@ -4835,158 +4835,6 @@ sup {
     }
 }
 
-#particles-js {
-    background: #1a222c;
-    display: flex;
-    vertical-align: bottom;
-    min-height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed
-}
-
-#particles-js .particles-js-canvas-el {
-    height: 100vh!important
-}
-
-.header {
-    font-family: 'Montserrat', sans-serif;
-    z-index: 1;
-    text-align: center;
-    color: #fff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: 0 auto;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%)
-}
-
-.header .site-title {
-    font-size: 50px;
-    display: block;
-    line-height: 1;
-    color: #fff
-}
-
-@media only screen and (min-width:768px) {
-    .header .site-title {
-        margin: 0;
-        font-size: 76px
-    }
-}
-
-.header .site-description {
-    font-size: 20px;
-    display: block;
-    line-height: 1;
-    color: #fff;
-    margin-top: 10px
-}
-
-@media only screen and (min-width:768px) {
-    .header .site-description {
-        font-size: 34px
-    }
-}
-
-.header-links {
-    margin: 10px
-}
-
-.header-links .link {
-    color: #fff;
-    text-decoration: none;
-    font-size: 15px;
-    margin: 10px
-}
-
-@media only screen and (min-width:768px) {
-    .header-links .link {
-        font-size: 20px
-    }
-}
-
-.header-icons {
-    display: flex;
-    justify-content: center;
-    text-align: center
-}
-
-.header-icons a {
-    outline: 0!important;
-    border: none!important;
-    outline-style: none!important;
-    -moz-outline-style: none!important
-}
-
-.down,
-.header-icons .icon {
-    color: #fff;
-    text-align: center
-}
-
-.header-icons .icon {
-    height: 20px;
-    padding: 10px;
-    border-radius: 50%;
-    transition: all .5s;
-    width: 20px;
-    font-size: 20px;
-    margin: 5px;
-    border: 2px solid #fff
-}
-
-.header-icons .icon:active,
-.header-icons .icon:hover {
-    color: #1a222c;
-    background: #fff
-}
-
-@media only screen and (min-width:768px) {
-    .header-icons .icon {
-        width: 35px;
-        height: 35px;
-        font-size: 30px
-    }
-}
-
-.down {
-    position: absolute;
-    bottom: 25px;
-    width: 100%;
-    margin: 0 auto;
-    display: block;
-    font-size: 30px;
-    cursor: pointer;
-    outline: 0!important;
-    border: none!important;
-    outline-style: none!important;
-    -moz-outline-style: none!important
-}
-
-.down .icon {
-    position: absolute;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    width: 100px;
-    height: 100px;
-    fill: #fff;
-    -webkit-animation: pulse 1.3s infinite;
-    animation: pulse 1.3s infinite
-}
-
-.down .icon:active,
-.down .icon:hover,
-.footer a:active,
-.footer a:hover {
-    color: #4b5664
-}
-
 #about {
     font-size: 120%;
     width: 90%;
@@ -5042,20 +4890,6 @@ body {
     margin: 5px auto
 }
 
-.footer {
-    background: #1a222c;
-    padding: 10px 0;
-    margin-top: 100px;
-    text-align: center;
-    color: #fff
-}
-
-.footer .love {
+.love {
     color: red
-}
-
-.footer a {
-    text-decoration: none;
-    margin: 0;
-    color: #fff
 }
