--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -10,6 +10,7 @@
 
 			<nav>
 				<a href="{{ site.baseurl }}/">Home</a>
+				<a href="{{ site.baseurl }}/services">Services</a>
 				<a href="{{ site.baseurl }}/blog">Blog</a>
 				<a href="{{ site.baseurl }}/about">About</a>
 			</nav>
