fix typo on homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -51,7 +51,7 @@
 				  <path fill="#FFFFFF" d="M6,1v5h2V5h2V1H6z M9,4H8V2h1V4z"/>
 				  <polygon fill="#FFFFFF" points="11,1 11,5 13,5 13,2 14,2 14,5 15,5 15,2 16,2 16,5 17,5 17,1 "/>
 				</svg>
-				<p>We're happy to work outside, too. We'll cut your grass, move your trees, light your fires, all that kind of stuff. Got a dirty hour? We'll clean it up for you. Point is, as long as we're equipped for it, we'll do it for you, and we'll do our best to keep the price fair.</p>
+				<p>We're happy to work outside, too. We'll cut your grass, move your trees, light your fires, all that kind of stuff. Got a dirty house? We'll clean it up for you. Point is, as long as we're equipped for it, we'll do it for you, and we'll do our best to keep the price fair.</p>
 			</div>
 		</div>
 		<div class="user-details">
