--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@
 				<p>Our main development languages are C++ and Java, but we have worked with C#, Python, PHP and several others. We support Windows and Linux platforms, and are working to expand to Android (just for you!)</p>
 			</div>
 			<div class="tech">
-				<a href="/services/engineering"><h2>Work</h2></a>
+				<a href="/services/labour"><h2>Labour</h2></a>
 				<svg viewBox="0 0 128 128">
 				  <path fill="#F34F29" d="M124.737 58.378l-55.116-55.114c-3.172-3.174-8.32-3.174-11.497 0l-11.444 11.446 14.518 14.518c3.375-1.139 7.243-.375 9.932 2.314 2.703 2.706 3.461 6.607 2.294 9.993l13.992 13.993c3.385-1.167 7.292-.413 9.994 2.295 3.78 3.777 3.78 9.9 0 13.679-3.78 3.78-9.901 3.78-13.683 0-2.842-2.844-3.545-7.019-2.105-10.521l-13.048-13.048-.002 34.341c.922.455 1.791 1.063 2.559 1.828 3.778 3.777 3.778 9.898 0 13.683-3.779 3.777-9.904 3.777-13.679 0-3.778-3.784-3.778-9.905 0-13.683.934-.933 2.014-1.638 3.167-2.11v-34.659c-1.153-.472-2.231-1.172-3.167-2.111-2.862-2.86-3.551-7.06-2.083-10.576l-14.313-14.313-37.792 37.79c-3.175 3.177-3.175 8.325 0 11.5l55.117 55.114c3.174 3.174 8.32 3.174 11.499 0l54.858-54.858c3.174-3.176 3.174-8.327-.001-11.501z"></path>
 				</svg> 
@@ -51,7 +51,7 @@
 				  <path fill="#FFFFFF" d="M6,1v5h2V5h2V1H6z M9,4H8V2h1V4z"/>
 				  <polygon fill="#FFFFFF" points="11,1 11,5 13,5 13,2 14,2 14,5 15,5 15,2 16,2 16,5 17,5 17,1 "/>
 				</svg>
-				<p>We're happy to work outside, too. We'll cut your grass, move your trees, light your fires, all that kind of stuff. Got a dirty house? We'll clean it up for you. Point is, as long as we're equipped for it, we'll do it for you, and we'll do our best to keep the price fair.</p>
+				<p>We've got a couple strapping young lads willing to work all kinds of jobs. Want some boxes moved? How about a nasty house cleaned up all sparkly new? Maybe what you need is someone to clean your garden or mow your lawn. Whatever the case, we're looking to work.</p>
 			</div>
 		</div>
 		<div class="user-details">
